Fixed contact margin on tablet

--- a/_src/assets/scss/components/_hero.scss
+++ b/_src/assets/scss/components/_hero.scss
@@ -35,26 +35,30 @@
     .hero-claim{
         background: url(../images/hero-1.jpg) center no-repeat $colorwhite;
         background-size: 100%;
+        height: 421px;
     }
+
+    .hero-claim-contact {
+        height: 300px;
+    }
+
     .h2-claim {
         font-size: 24px;
         text-align: left; /*Doesn't work*/
-        }
-        .hero-claim {
-        height: 421px;
-        }
-        .claim-container{
+    }
+    
+    .claim-container{
         width: 924px;
-        }
-        .claim {
+    }
+    .claim {
         opacity: 0.7;
         padding: 15px 30px;
         margin-left: 50px;
         width: 441px; 
         bottom: 0px;
         align-items: flex-start;
-        }
     }
+}
 
     @media all and (min-width:1200px){
         .h2-claim {
