--- a/_src/assets/scss/pages/_contact.scss
+++ b/_src/assets/scss/pages/_contact.scss
@@ -5,5 +5,16 @@
 }
 
 .contact-box {
-    text-align: center,
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
+}
+@media all and (min-width: 768px) and (max-width: 1200px) {
+    .contact-text{
+        width: 442px;
+        & p {
+            margin-top: 0;
+        }
+    }
 }
